# FileOrganizer

./: .gitignore  README.rst  setup.cfg
src/: __init__.py  autogui_controller.py  config.py  gui.py  image_widgets.py  item_treeview.py  mapping.ini  model.py  pdf_reader.py  pdf_reader.spec  pdf_viewer.py  scrollbar_treeview.py
