[metadata]
name = file_organizer
version = 0.0.0
license = MIT
description = Display files from source folders and organize them.
long_description = file: README.rst
author = Bjørn Christian Olsen
author_email = 
classifiers=
    Development Status :: 1 - Planning
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    Pillow
    PyMuPDF

[options.packages.find]
where=src